--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "dependencies": {
     "@alch/alchemy-web3": "^1.1.8",
     "@truffle/hdwallet-provider": "^1.7.0",
+    "@uniswap/sdk": "^3.0.3",
     "axios": "^0.19.2",
     "console.table": "^0.10.0",
     "dotenv": "^8.6.0",
     "ejs": "^2.5.6",
+    "ethers": "^6.6.5",
     "express": "^4.15.2",
     "inquirer": "^8.2.1",
     "lodash": "^4.17.21",
