--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@truffle/hdwallet-provider": "^1.7.0",
     "@uniswap/sdk": "^3.0.3",
     "axios": "^0.19.2",
+    "commander": "^11.0.0",
     "console.table": "^0.10.0",
     "dotenv": "^8.6.0",
     "ejs": "^2.5.6",
@@ -12,6 +13,7 @@
     "inquirer": "^8.2.1",
     "lodash": "^4.17.21",
     "web3": "^1.7.1",
-    "xlsx": "^0.18.4"
+    "xlsx": "^0.18.4",
+    "yargs": "^17.7.2"
   }
 }
